[project]
name = "price-action-analyst-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.5",
    "fastapi>=0.115.12",
    "pydantic-ai>=0.0.46",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
